--- a/wp-content/themes/the-tomorrow/_/css/style.css
+++ b/wp-content/themes/the-tomorrow/_/css/style.css
@@ -1744,6 +1744,7 @@ body.home footer {
   display: none;
 }
 footer {
+  height: 176px;
   background: #606a70;
   text-align: center;
   color: #fff;
@@ -1751,10 +1752,21 @@ footer {
   margin: 35px 0 0 0;
   position: relative;
   z-index: 2;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
   /************************************************
 
 
 /* paginazione standard */
+}
+footer.sticky {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 footer .bottom {
   width: 100%;
