--- a/wp-content/themes/the-tomorrow/_/lib/scss/style.scss
+++ b/wp-content/themes/the-tomorrow/_/lib/scss/style.scss
@@ -628,8 +628,10 @@ body.internal-page{
 ************************************************/
 
 body.home footer { display: none; }
-footer {
-  background: #606A70; text-align: center; color: #fff; padding: 35px 0 45px 0; margin: 35px 0 0 0; position: relative; z-index: 2;
+// .push { height: 176px; }
+footer { 
+  &.sticky { position: fixed; left: 0; bottom: 0; width: 100%;  }
+  height: 176px; background: #606A70; text-align: center; color: #fff; padding: 35px 0 45px 0; margin: 35px 0 0 0; position: relative; z-index: 2; @include transition(all 0.5s ease);
   .bottom {
     width: 100%; margin: 0 auto; text-align: left; clear: both; display: block; border-top: 1px solid #fff; padding: 10px 0 0 0;
     p.address, p.disclaimer { height: 16px; line-height: 16px; }
