--- a/wp-content/themes/the-tomorrow/_/lib/scss/style.scss
+++ b/wp-content/themes/the-tomorrow/_/lib/scss/style.scss
@@ -328,7 +328,9 @@ nav#megamenu{
                                     internal pages                               */
 body.internal-page{
 
-  h2{ font-weight: 700; font-size: 40px; padding: 0 0 38px 0; margin: 0 0 0 0; font-family: "adelle-sans"; font-weight: 700; }
+  h2{ font-weight: 700; font-size: 40px; padding: 0 0 38px 0; margin: 0 0 0 0; font-family: "adelle-sans"; font-weight: 700;
+    span { font-weight: 300; }
+  }
   
   .archive-box{
     position: relative; margin: 0 36px 24px 0; width: 220px; height: 160px; float: left; font-family: 'adelle-sans';
